--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ python-dotenv==1.0.1
 streamlit==1.31.1
 tiktoken==0.5.2
 httpx==0.27
+python-docx==1.1.2
+python-pptx==1.0.2
+langchain-openai==0.3.9
